--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ android {
         }
         release {
             debuggable true
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -70,7 +70,73 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.dagger:hilt-android:2.50'
     kapt 'com.google.dagger:hilt-compiler:2.50'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'
-    implementation project(':mylibrary')
+
+
+    //view
+    implementation  'com.google.android.material:material:1.2.1'
+    implementation  'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    //navigation
+    implementation  'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation  'androidx.navigation:navigation-ui-ktx:2.5.2'
+
+//    implementation libraries.coroutine
+
+    //network
+    implementation  'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation  'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation  'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    //logger
+    implementation  'com.jakewharton.timber:timber:4.7.1'
+
+    implementation  'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation  'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation  'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    kapt 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+
+    implementation  'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:glide:4.11.0'
+    implementation  'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation 'org.greenrobot:eventbus:3.3.1'
+    implementation 'com.alibaba:fastjson:1.1.72.android'
+    implementation 'org.modelmapper:modelmapper:3.1.1'
+    implementation "com.airbnb.android:lottie:4.2.0"
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //camera view
+    implementation 'com.otaliastudios:cameraview:2.7.2'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation 'com.google.mlkit:barcode-scanning:17.1.0'
+    implementation 'androidx.camera:camera-mlkit-vision:1.2.0-beta02'
+
+    implementation 'com.google.zxing:core:3.5.0'
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'com.google.android.libraries.places:places:3.2.0'
+
+
+    implementation 'org.modelmapper:modelmapper:3.1.1'
+
     implementation 'com.blankj:utilcodex:1.31.1'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'
+
+    def camerax_version = "1.2.2"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
+
+
+    implementation files('libs/vhomesdk-release.aar')
+    implementation files('libs/uilibrary-release.aar')
 }
