--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 
 android {
     namespace 'com.example.demo2602'
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.demo2602"
         minSdk 24
-        targetSdk 34
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -111,9 +111,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.6.0-alpha03'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    //implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -122,7 +122,6 @@ dependencies {
 
 
     //view
-    implementation  'com.google.android.material:material:1.2.1'
     implementation  'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //navigation
@@ -188,6 +187,8 @@ dependencies {
     implementation 'com.annimon:stream:1.2.1'
 
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
+
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
     def camerax_version = "1.2.2"
     implementation "androidx.camera:camera-core:${camerax_version}"
