--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,15 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    namespace 'com.example.demo2602'
+    namespace 'vn.com.rangdong.rallismartv3dev'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.demo2602"
+        applicationId "vn.com.rangdong.rallismartv3dev"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -38,7 +39,6 @@ android {
 
     buildTypes {
         debug {
-            applicationIdSuffix ".dev"
 
         }
         release {
@@ -65,6 +65,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'androidx.core:core-ktx:1.6.0-alpha03'
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.firebase:firebase-messaging:24.0.0'
+    implementation 'com.google.gms:google-services:4.3.10'
     //implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
