--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript{
     ext.kotlin_version = "1.6.0"
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.50'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
