--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
-    implementation 'androidx.core:core-ktx:1.6.0-alpha03'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-messaging:24.0.0'
     implementation 'com.google.gms:google-services:4.3.10'
     //implementation 'com.google.android.material:material:1.2.1'
@@ -144,6 +145,7 @@ dependencies {
 
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
 
+    implementation 'com.blankj:utilcodex:1.31.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
     def camerax_version = "1.2.2"
