--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,15 @@ android {
     buildTypes {
         debug {
 
+            resValue("string", "string_SDK_VHOME_BASE_URL", "https://stg-iotapi.viettel.io")
+            resValue("string", "string_SDK_VHOME_APP_NAME", "VhomeSDK")
+
         }
         release {
             debuggable true
             minifyEnabled true
             shrinkResources true
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
