--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-messaging:24.0.0'
     implementation 'com.google.gms:google-services:4.3.10'
